Issue #27942: String constants now interned recursively in tuples and frozensets.